feat(title): crazy credits
